src/test/deca/syntax/valid/objet/ClassDeclBodyMeth.deca
// Description : Test la declaration simple d'une classe avec corps mais sans extension
// Resultat : OK


class Thing {
    protected int i;

    int getI(){
        return i;
    }

}

